# email_test_task

./: .env.db.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
core/: asgi.py  settings.py
