[tool.poetry]
name = "email-test-task"
version = "0.1.0"
description = ""
authors = ["ivan ivaneev <ivaneev.ivane@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.15"
psycopg2-binary = "^2.9.9"
channels = "^4.1.0"
channels-redis = "^4.2.0"
daphne = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
